--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,56 +7,57 @@ body {
 	 display:flex;
 	 flex-wrap:  wrap;
 	 border: 1px solid #D1D3D6;
-     max-width:1090px;
-	max-height:910px;	 
-	 margin-left:255px;
-	 margin-right:auto;
-	 margin-bottom:10px;
+     width:1090px;
+	max-height:200px;	 
+	
+	 
 	 background-color:white;
 	 position: relative;
 	 overflow:hidden;
 	 align-items:center;
-     
 }
 
 .firstdiv_div1{
-	max-height:70px;
-	width:140px;
-	flex:  1 1 20%;
-	align-self:center;
-	
-	position:relative;
+	padding-left:5px;
+	height:70px;
+	width:295px;
+	flex:  0 0 200px;
+	justify-content:center;
+
 }
 
 .firstdiv_div2{
-	flex: 1 1 60%;
-	max-height:70px;
-	position:relative;
-	max-width:500px;
-    
 	
+	flex: 1 1 360px;
+	height:30px;
+	width:360px;
+	border: 1px solid #D1D3D6;
+    align-self:center;
+    justify-self:center;	
+    
 }
 
 
 .firstdiv_div3{
    
-	position:relative;
-	max-height:70px;
-	width:400px;
-	flex:1 1 20%;
 	
+	max-height:70px;
+	width:295px;
+	flex:1 1 300px;
+	padding-right:5px;
 	text-align: right;
 }
 
 .paybutton1{
-	position:relative; display: inline-block;
+	position:relative; 
+	display: inline-block;
 	
-	 
+	
 	 float:right;
 	background-color:#2797EA;
 	color:white;
 	border: 1px solid #D1D3D6;
-	height:30px;
+	height:33px;
 	width:100px;
 	font-size:13px;
 	
@@ -79,7 +80,7 @@ body {
 	 font-family: 'Comic Sans', monospace;
 	 font-weight:bold;
 	 width:60px;
-	 height:10px;
+	 height:20px;
 
 }
 .Seconddiv2{
@@ -88,25 +89,22 @@ body {
 	 border: 1px solid #D1D3D6;
      max-width:1090px;
      height:40px;	 
-	 margin-left:255px;
-	 margin-right:auto;
-	 margin-bottom:10px;
+	 
 	 background-color:white;
-	 position: relative;
+	
   overflow: hidden;
 
 }
 .dropdown{
 	color:black;
-	width:150px;
+	width:130px;
     height:30px;
 	font-size:24px;
 	border:none;	
     background-color:white;
-	display:inline-block;
+	
 
-    margin-left: 5px;     
-    margin-top:2px;
+    align-self:center;
     position: relative;
 	
 }
@@ -157,14 +155,14 @@ text-align:center/left/right;
 
 .h11 {
 	display:flex;
-	margin-left:250px;
+	
    font-size:27px;
 
 }
 
 .h12 {
 	display:flex;
-	margin-left:250px;
+	
   font-size:27px;
    
 
@@ -176,8 +174,8 @@ text-align:center/left/right;
   flex-flow: row wrap;
   grid-template-columns: 25% 25% 25% 25%;
    background-color:#F0F0F0;
-  padding: 10px;
-  margin-left:240px;
+  
+  
   max-width:1180px;
 }
 .grid-item {
@@ -223,67 +221,51 @@ text-align:center/left/right;
 }
 
 .Loveproduct{
-	
+	position:relative;
 	display: flex;
-  flex-direction: row;
-	margin-left:260px;
+    flex-wrap: wrap;
+	
 	border: 1px solid #D1D3D6;
 	max-width:1090px;
-	max-height:4000px;
+	height:40px;
 	overflow:hidden;
+	align-items:center;
+}
+.lovep{
+	
+	flex: 1 1 400px;
+	font-size:15px;
+	font-family: Arial, Helvetica, sans-serif;
+	font-weight:none;
+	float:left;
+	width:500px;
+	max-height:20px;
+	
 	
 }
 
 .showmore{
-	display:flex;
-	justify-content:flex-end;	
+	flex: 1 1 200px;
 	color:#2797EA;
-	float:right;
-	font-size:20px;
+	justify-self:flex-end;
+	font-size:15px;
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight:none;
-	height:30px;
-	max-width:500px;
-	padding-bottom:10px;
-	margin-left:500px;
-
-}
-
-.lovep{
-	font-size:20px;
-	font-family: Arial, Helvetica, sans-serif;
-	font-weight:none;
-	height:30px;
-	max-width:1000px;
 	max-height:20px;
-	padding-bottom:10px;
-	margin-left:20px;
-	
+	max-width:110px;
+	float:right;
+
 }
 
 
-.check{
-	font-size:20px;
-	font-family: Arial, Helvetica, sans-serif;
-	color:#BEBFC1;
-	font-weight:none;	
-	
-	
-	margin-bottom:10px;
-}
 
-.uunderlinep{
-	margin-left:1px;
-	color:#2797EA;
-	
-}
 
 
 
 
 .Testmotionals{
 	
-	margin-left:260px;
+	
 	border: 1px solid #D1D3D6;
 	max-width:1090px;
 	
@@ -428,7 +410,7 @@ max-width:900px;
 .readbutton{
 	
 	height:40px;
-	margin-right:30px;
+	
 	margin-top:10px;
 	font-weight:bold;
 	max-width:150px;
@@ -502,7 +484,7 @@ margin-left:76px;
 	position:relative;
 	  display: flex;
   flex-wrap: wrap;
-	margin-left:260px;
+	
 	border: 1px solid #D1D3D6;
 	max-width:1090px;
 	max-height:910px;
@@ -510,21 +492,39 @@ margin-left:76px;
 	
 	
 }
-@media (max-width: 1261px) {
+@media (max-width: 840px) {
   .lastsection {
     flex-direction: column;
+	max-width:540px;
   }
 }
 
-@media (max-width: 1261 px) {
+@media (max-width: 840px) {	
   .firstdiv {
-    flex-direction: column;
+	  
+    flex-direction: row;
+	max-width:540px;
   }
+  .firstdiv_div1 { order: 1; }
+    .firstdiv_div3 { order: 2;  }
+    .firstdiv_div2 { order: 3;	
+	max-width:340px;
+	margin-left:90px;}
+    
+}
+@media (max-width: 840px) {
+  .Seconddiv2
+ {
+    flex-direction: row;
+	max-width:540px;
+	overflow:hidden;
+  }
+  .Testmotionals{max-width:590px;}
+  .Loveproduct{max-width:540px;}
 }
 
 
-
-@media (max-width: 1261 px) {
+@media (max-width: 840px) {
   .Testmotionals_div1
  {
     flex-direction: column;
