--- a/stylesheet.css
+++ b/stylesheet.css
@@ -218,12 +218,12 @@ float:left;
 .addtochart{
 
 	
-	height:40px;
+	height:65px;
 	float:right;
 	background-color:#2797EA;
 	color:white;
 	border: 1px solid #D1D3D6;
-	
+	padding:20px;
 }
 
 
