--- a/stylesheet.css
+++ b/stylesheet.css
@@ -132,7 +132,7 @@ body {
 .categories_2 {
   align-items: center;
   margin: auto;
-  max-height: 1000px;
+ 
   max-width: 1684px;
   position: relative;
 }
@@ -352,18 +352,18 @@ body {
   .body {
     max-width: 440px;
   }
-  .firstdiv {
+  .starter_kit {
     flex-direction: row;
   }
-  .firstdiv_div1 {
+  .starter_kit_div1 {
     order: 1;
     flex: 1 1 50%;
   }
-  .firstdiv_div3 {
+  .starter_kit_div3 {
     order: 2;
     flex: 1 1 50%;
   }
-  .firstdiv_div2 {
+  .starter_kit_div2 {
     order: 3;
     flex: 1 1 100%;
   }
