--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,7 +219,7 @@ body {
   font-size: 15px;
   font-weight: none;
 }
-.love_product__show_more {
+.love_product_show_more {
   color: #2797ea;
   flex: 1 1 200px;
   float: right;
