--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   margin: auto;
-  max-height: 1000px;
+  
   max-width: 1684px;
   overflow: hidden;
   padding: 7px;
@@ -18,10 +18,12 @@ body {
 }
 
 .starter_kit_div1 {
-
+  
   flex: 1 1 20%;
   height: 50px;
-  justify-content: center;
+  align-items: center;
+  align-self: center;
+   padding-top: 10px;
 }
 
 .starter_kit_div2 {
@@ -29,29 +31,41 @@ body {
   align-self: center;
   border: 1px solid #d1d3d6;
   flex: 1 1 40%;
-  height: 30px;
+  height: 40px;
   justify-self: center;
 }
 
 .starter_kit_div3 {
   flex: 1 1 20%;
-  max-height: 70px;
+  max-height: 80px;
   text-align: right;
+   
+
 }
 
 .starter_kit_header {
   color: #2797ea;
   font-family: Times New Roman, Times, serif;
   font-weight: bold;
+  font-size: 35px;
+  
+}
+.starter_kit_div3_div
+{
+background-color:#2797ea ;
+max-width:130px ;
+float: right;
+padding: 4px;
+
 }
 
 .starter_kit_btn {
   background-color: #2797ea;
-  border: 1px solid #d1d3d6;
+  border: none;
   color: white;
   float: right;
   font-size: 13px;
-  height: 33px;
+  height: 38px;
   position: relative;
   width: 100px;
 }
@@ -68,19 +82,19 @@ body {
 
 .category {
 
-
+  padding: 7px;
   background-color: white;
   border: 1px solid #d1d3d6;
   display: flex;
   flex-direction: row;
   height: 40px;
   margin: auto;
-  max-width: 1700px;
+  max-width: 1684px;
   overflow: hidden;
 }
 .dropdown {
 
-
+  
   align-self: center;
   background-color: white;
   border: none;
@@ -96,20 +110,15 @@ body {
 }
 
 .category_reviews {
-
+ 
   color: #bebfc1;
   font-family: Times New Roman, Times, serif;
   font-size: 22px;
-}
-.num_of_category {
-  background-color: white;
-  border: 2px solid #d1d3d6;
-  color: #aeb6c2;
-  float: left;
-  font-size: 18px;
+  float: right;
   height: 20px;
-  padding: 20px;
+ 
 }
+
 
 .category_Img1 {
 
@@ -129,18 +138,11 @@ body {
   font-size: 27px;
 }
 
-.categories_2 {
-  align-items: center;
-  margin: auto;
- 
-  max-width: 1684px;
-  position: relative;
-}
 
 .grid-container {
   background-color: #f0f0f0;
   display: grid;
-  gap: 8px;
+  gap: 25px;
   grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
   margin: auto;
   max-width: 1700px;
@@ -150,7 +152,7 @@ body {
   border: 1px solid #d1d3d6;
   color: black;
   font-size: 17px;
-  padding: 7px;
+  padding: 10px;
 }
 .related_products {
   align-items: center;
@@ -167,10 +169,29 @@ body {
   padding: 11px;
 }
 
+
+.categories_2 {
+  align-items: center;
+  margin: auto;
+ 
+  max-width: 1684px;
+  
+}
+.categories_2_div{
+display:block;
+
+}
+.categories_2_div_p1
+{  font-weight:bold;
+  padding: 0px 60px 0px 0px;  
+text-align: center;
+
+}
 .grid-txt {
   color: #abb2b9;
   font-size: 15px;
   text-align: center;
+  padding: 0px 30px 0px 0px;
 }
 
 .la {
@@ -179,21 +200,31 @@ body {
   font-weight: none;
 }
 
-.Testmotionals_reviews {
-  color: #bebfc1;
-  float: left;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 14px;
-}
+
 .category_btn {
   background-color: #2797ea;
   border: 1px solid #d1d3d6;
   color: white;
   float: right;
   height: 65px;
-  padding: 20px;
+  padding: 20px 70px 20px 55px ;
+  text-align: center;
+  font-size: 20px;
 }
-
+.num_of_category {
+  background-color: white;
+  border: 2px solid #d1d3d6;
+  color: #aeb6c2;
+  float: left;
+  font-size: 20px;
+  height: 20px;
+  padding: 20px 60px 20px 40px;
+    
+}
+.related_products_last{
+ display: inline-block;
+ 
+}
 .love_product {
   align-items: center;
   border: 1px solid #d1d3d6;
@@ -230,7 +261,12 @@ body {
   max-height: 20px;
   max-width: 110px;
 }
-
+.Testmotionals_reviews {
+  color: #bebfc1;
+  float: left;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 14px;
+}
 .Testmotionals {
   background-color: white;
   border: 1px solid #d1d3d6;
@@ -243,6 +279,7 @@ body {
   color: #2797ea;
   float: left;
   font-size: 20px;
+  clear:left;
 }
 
 .Testmotionals_p1 {
