--- a/stylesheet.css
+++ b/stylesheet.css
@@ -109,8 +109,10 @@ padding: 4px;
   background-color: white;
   border: none;
   color: black;
-  font-size: 24px;
+  font-size: 26px;
+  padding-left: 35px;
   height: 30px;
+
   position: relative;
 }
 
