--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ body {
   height: 37px; 
   float: left;
    border: none;
-   width: 750px;
+   width: 550px;
 
 }
 
@@ -328,6 +328,12 @@ text-align: center;
   padding-left: 4px;
 }
 
+.check{
+  font-weight: normal;
+  color:  #bebfc1;
+
+}
+
 .Testmotionals_div2 {
   height: 70px;
   align-items: center;
@@ -347,6 +353,8 @@ text-align: center;
 
   float: left;
   height: 34px;
+  padding: 0px 150px 0px 0px;
+
 }
 
 .subscribe_btn {
@@ -354,22 +362,26 @@ text-align: center;
   border: 1px solid #d1d3d6;
   color: white;
   float: lefts;
-  height: 40px;
+  height: 38px;
+  padding: 0px 50px 0px 20px;
+
 }
 .subscribe_p1 {
   float: left;
   font-size: 25px;
-
+  font-weight: bold;
+  padding: 20px;
   color: black;
 }
 
 .subscribe_p2 {
   color: black;
-  font-size: 15px;
+  font-size: 20px;
   height: 10px;
+  
 }
 .subscribe_div1 {
-
+  
   flex: 0 50%;
   float: left;
   max-height: 400px;
@@ -378,6 +390,7 @@ text-align: center;
 .subscribe_div2 {
   flex: 0 50%;
   max-height: 300px;
+  
 }
 .subscribe {
   background-color: white;
@@ -394,7 +407,8 @@ text-align: center;
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 15px;
-  margin-left: 76px;
+  display: inline-block;
+  
 }
 
 @media (max-width: 1200px) {
@@ -402,7 +416,7 @@ text-align: center;
     max-width: 440px;
   }
   .starter_kit_div2_input{
-    width: 350px;
+    width: 250px;
   }
   .starter_kit {
     flex-direction: row;
@@ -418,5 +432,8 @@ text-align: center;
   .starter_kit_div2 {
     order: 3;
     flex: 1 1 100%;
+  }
+  .subscribe_div2{
+    padding-left: 20px;
   }
 }
